Undo does not always properly clear no-more-used library data #73164

Closed
opened 2020-01-16 16:03:54 +01:00 by Bastien Montagne · 4 comments

System Information
All…

Blender Version
All…

Short description of error
Blender undo steps do not always properly clear all no-more-used libraries, especially when dealing with indirect hierarchies.

Split from original report #72887 (Crash when issuing an undo operation immediately after linking a collection when an outliner's display mode is set to "Blender File").

Exact steps for others to reproduce the error

With those files:
TEST.blend
1.blend
2.blend

  • Open TEST.blend
  • Link a collection from 2.blend (2.blend has an object linked from 1.blend; now the Outliner has 2 linked files)
  • Undo the operation (Ctrl+Z)
  • You can see in outliner that both libraries (and some indirectly-linked datablocks) are still there.
**System Information** All… **Blender Version** All… **Short description of error** Blender undo steps do not always properly clear all no-more-used libraries, especially when dealing with indirect hierarchies. Split from original report #72887 (Crash when issuing an undo operation immediately after linking a collection when an outliner's display mode is set to "Blender File"). **Exact steps for others to reproduce the error** With those files: [TEST.blend](https://archive.blender.org/developer/F8258608/TEST.blend) [1.blend](https://archive.blender.org/developer/F8258609/1.blend) [2.blend](https://archive.blender.org/developer/F8258610/2.blend) - Open TEST.blend - Link a collection from 2.blend (2.blend has an object linked from 1.blend; now the Outliner has 2 linked files) - Undo the operation (Ctrl+Z) - You can see in outliner that both libraries (and some indirectly-linked datablocks) are still there.
Bastien Montagne self-assigned this 2020-01-16 16:03:54 +01:00
Author
Owner

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Owner

Added subscribers: @mont29, @RL

Added subscribers: @mont29, @RL

This issue was referenced by 396bf6ca78

This issue was referenced by 396bf6ca781fdfa79544c92f3d6bdff52c96fedf
Author
Owner

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73164
No description provided.